@@ -418,6 +418,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7077: logging: SysLogHandler now treats Unicode as per RFC 5424.
+
 - Issue #7099: Decimal.is_normal now returns True for numbers with exponent
   larger than emax.
 
